# alternator-client-rust

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  rust.yaml
src/: client.rs  compression.rs  config.rs  customize.rs  decompression.rs  interceptors.rs  lib.rs  live_nodes.rs  optimize_headers.rs  query_plan.rs  routing_scope.rs  user_agent.rs
src/keyrouting/: affinity_config.rs  classifier.rs  go_rand.rs  hasher.rs  mod.rs  murmurhash3.rs  resolver.rs
tests/: dynamodb_compatibility.rs  https_test_tests.rs  load_balancing_tests.rs  non_success_connection_reuse_tests.rs
tests/ccm_wrapper/: cluster.rs
tests/common/: proxy.rs
tests/http_content/: body_compression.rs  correct_line.rs  header_whitelist.rs  mod.rs  optimize_headers.rs
tests/http_content/common/: http_test.rs
tests/https_test/: discovery.rs  main_api.rs  mod.rs
tests/https_test/common/: https_test_context.rs
tests/load_balancing/: connection_reuse.rs  load_balancing_tests.rs  mod.rs
tests/load_balancing/common/: cluster_utils.rs  scope_utils.rs
