[package]
name = "alternator-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-sdk-dynamodb = "1.103.0"
aws-smithy-async = "1.2.7"
aws-smithy-runtime = "1.9.8"
aws-smithy-runtime-api = "1.10.0"
aws-types = "1.3.11"
aws-runtime = "1.5.18"
tokio = { version = "1", features = ["full"] }
aws-smithy-types = "1.3.6"
flate2 = "1.1.5"
http-body-util = "0.1"
anyhow = "1.0.102"
itertools = "0.14.0"
reqwest = { version = "0.11", features = ["json"] }
url = "2.5.8"
arc-swap = "1.9.1"
rand = "0.10.1"

[dev-dependencies]
aws-sdk-dynamodb = { version = "1.103.0", features = ["test-util"] }
aws-smithy-types = { version = "1.3.6", features = ["http-body-1-x"] }
aws-smithy-http-client = "1.1.5"
uuid = { version = "1.22.0", features = ["v4"] }
hyper = { version = "1.8", features = ["client", "server", "http1"] }
http = "1.0"
http-body-util = "0.1"
hyper-util = "0.1"
serial_test = "3.2.0"
futures = "0.3.31"
test-context = "0.5.5"
rustdoc-types = "0.56.0"
serde_json = "1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(ccm_tests)',
] }
