[package]
name = "alternator-driver"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Rust DynamoDB client wrapper for ScyllaDB Alternator with client-side load balancing."
readme = "README.md"
repository = "https://github.com/scylladb/alternator-client-rust"
keywords = ["scylladb", "alternator", "dynamodb", "aws-sdk"]
categories = ["database", "api-bindings", "asynchronous"]

[dependencies]
aws-sdk-dynamodb = "1.103.0"
aws-smithy-async = "1.2.7"
aws-smithy-runtime = "1.9.8"
aws-smithy-runtime-api = "1.10.0"
aws-types = "1.3.11"
aws-runtime = "1.5.18"
tokio = { version = "1", features = ["full"] }
aws-smithy-types = { version = "1.3.6", features = ["http-body-1-x"] }
flate2 = "1.1.5"
http-body-util = "0.1"
anyhow = "1.0.102"
itertools = "0.14.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"] }
url = "2.5.8"
arc-swap = "1.9.1"
rand = "0.10.1"
dashmap = "6.1.0"
async-compression = { version = "0.4", features = ["tokio", "gzip", "zlib"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
http-body = "1.0"
bytes = "1"

[dev-dependencies]
aws-sdk-dynamodb = { version = "1.103.0", features = ["test-util"] }
aws-smithy-types = "1.3.6"
aws-smithy-http-client = { version = "1.1.5", features = ["rustls-aws-lc"] }
uuid = { version = "1.22.0", features = ["v4"] }
hyper = { version = "1.8", features = ["client", "server", "http1"] }
http = "1.0"
http-body-util = "0.1"
hyper-util = "0.1"
serial_test = "3.2.0"
futures = "0.3.31"
test-context = "0.5.5"
rustdoc-types = "0.56.0"
serde_json = "1.0"
rcgen = "0.13"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pki-types = "1"
ctor = "0.8.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(ccm_tests)',
] }
